# Fabric-Stata-Quickstart

./: .gitignore  README.md  config.example.yaml  example.ipynb  fabric_utils.py  pyproject.toml  requirements.txt
src/fabric_stata/: __init__.py  _utils.py
